<resources>
    <string name="app_name">Proyecto-Inti-Electrodomesticos</string>
    <string name="titulo_logo">Inti - Electrodomesticos</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="correo">Correo Electronico :</string>
    <string name="clave">Contraseña :</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="clave_input">Ingrese su contraseña</string>
    <string name="correo_input">Ingrese su email</string>
    <string name="nombre_input">Ingrese sus nombres</string>
    <string name="apellido_input">Ingrese sus apellidos</string>
    <string name="link">¿No tienes una cuenta? Registrate aqui</string>
    <string name="registrar_usuario">Registra un nuevo usuario</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Nombres :</string>
    <string name="apellido">Apellidos :</string>
    <!--SUB MENUS TITULOS-->
    <string name="menu_sub_opciones">Opciones</string>
    <string name="menu_sub_cuenta">Cuenta</string>
    <string name="menu_sub_cerrar">Cerrar</string>
    <string name="page_title">Componentes</string>
    <!--SUB MENUS - OPCIONES-->
    <string name="menu_carrito">Productos Disponibles</string>
    <string name="menu_lista">Mis Pedidos</string>
    <!--SUB MENUS - CUENTA-->
    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_ayuda">Ayuda</string>
    <!--SUB MENUS - CERRAR-->
    <string name="menu_cerrar">Cerrar Sesion</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="user_input">ACTUALIZAR NOMBRE</string>
    <string name="ape_input">ACTUALIZAR APELLIDO</string>
    <string name="email_input">ACTUALIZAR CORREO</string>
    <string name="psw_input">ACTUALIZAR CONTRA</string>
    <string-array name="electro_options">
        <item>Licuadora</item>
        <item>Lavadora</item>
        <item>Refrigeradora</item>
        <item>TV Smart</item>
        <item>Batidora</item>
        <item>Aspiradora</item>
        <item>Olla Arrocera</item>
        <item>Equipo de Sonido</item>
    </string-array>
</resources>