<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario"
    android:background="@color/white">


    <TextView
        android:id="@+id/textVievInti"
        android:layout_width="248dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_logo"
        android:textColor="@color/titulo_logo"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="68dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/registrar_usuario"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatbtncamara" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_user_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRegistro" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/apellido_input"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewApellido" />

    <TextView
        android:id="@+id/viewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/apellido"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_user_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNombre" />

    <TextView
        android:id="@+id/viewCorreoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/correo"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <EditText
        android:id="@+id/txtEmailRegistro"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/correo_input"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCorreoReg" />

    <TextView
        android:id="@+id/viewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/clave"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailRegistro" />

    <EditText
        android:id="@+id/txtConfirmarContraseña"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/clave_input"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPasswordConfirmar" />

    <TextView
        android:id="@+id/viewPasswordConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/confirmar"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseñaRegistro" />

    <EditText
        android:id="@+id/txtContraseñaRegistro"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/clave_input"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPassword2" />

    <ImageView
        android:id="@+id/imageViewContraseña2"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_view"
        app:layout_constraintEnd_toEndOf="@+id/txtConfirmarContraseña"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@+id/txtConfirmarContraseña"
        app:layout_constraintTop_toTopOf="@+id/txtConfirmarContraseña" />

    <ImageView
        android:id="@+id/imageViewContraseña1"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_view"
        app:layout_constraintEnd_toEndOf="@+id/txtContraseñaRegistro"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="@+id/txtContraseñaRegistro"
        app:layout_constraintTop_toTopOf="@+id/txtContraseñaRegistro" />

    <Button
        android:id="@+id/btnRegistrarReg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@color/amarillo"
        android:text="@string/registrar"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarReg"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContraseña" />

    <Button
        android:id="@+id/btnCancelarReg"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:background="@color/amarillo"
        android:text="@string/cancelar"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContraseña" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatbtncamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textVievInti"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>