<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUser">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="MI PERFIL"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="361dp"
        android:layout_height="166dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@mipmap/user" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@color/amarillo"
        android:text="EDITAR DATOS"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseñaUsuario" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="211dp"
        android:layout_height="43dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/user_input"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="NOMBRE"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="CONTRASEÑA"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="CORREO"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="APELLIDOS"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtApellidoUsuario"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ape_input"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />

    <EditText
        android:id="@+id/txtCorreoUsuario"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoUsuario" />

    <EditText
        android:id="@+id/txtContraseñaUsuario"
        android:layout_width="211dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/psw_input"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="10dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>